--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -1,13 +1,3 @@
-
-
-
-.AboutMe{
-    background-image: url('../images/aboutMe_image.png');
-    background-repeat: no-repeat;
-    background-position: initial;
-    background-size: cover;
-}
-
 .site-title{
     font-size: 3rem;
     color: gray;
@@ -26,4 +16,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.video{
+    width: 300px;
+    height: 300px;
+}
+
+.videoContainer{
+    align-self: center;
 }
